--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "swiftrut-job-practice",
   "version": "1.0.0",
   "description": "Practice for job at SwiftRut Technologies",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "javascript",
@@ -14,6 +15,6 @@
   "author": "Dax Patel",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "prettier": "^3.3.3"
   }
 }
